added gh-pages to deploy

--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "firebase-crud",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://lhas.github.io/firebase-crud-0e1dev",
   "dependencies": {
     "firebase": "^4.11.0",
+    "gh-pages": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
